# ovs-dpdk-meson-issues

./: .gitmodules  LICENSE  README.md  README.rst  TEST-FRAMEWORKS.md
ovs/: config.h.meson  copy_files.sh  meson.build  meson_options.txt
ovs-meson/: config.h.meson  meson.build  meson_options.txt
ovs-meson/build-aux/: copy-file-from-build.py  extract-odp-netlink-macros-h.py  extract-odp-netlink-windows-dp-h.py
ovs-meson/include/: meson.build
ovs-meson/include/openvswitch/: compiler.h
ovs-meson/lib/: dirs.c.in  dirs.c.in.meson  sflow.map.in
ovs-meson/ovsdb/: meson.build  ovsdb.map.in
ovs-meson/python/ovs/: meson.build
ovs-meson/utilities/: meson.build
ovs-meson/vswitchd/: meson.build
ovs-meson/vtep/: meson.build
ovs/build-aux/: extract-odp-netlink-h.py
ovs/include/: meson.build
ovs/include/openvswitch/: compiler.h  meson.build  thread.h  util.h
ovs/lib/: dpdk.c  dpif-netdev.c  meson.build  netdev-dpdk.c  openvswitch.map.in  openvswitchavx512.map  ovs-atomic.h  ovs-thread.h  sflow_api.h  stream-windows.c  util.c  vlog.c
ovs/ofproto/: meson.build  ofproto.map  ofproto.map.in
ovs/ovsdb/: meson.build
ovs/python/ovs/: meson.build
ovs/utilities/: meson.build
ovs/vswitchd/: meson.build
ovs/vtep/: meson.build  vtep.map  vtep.map.in
patches/: 0001-issue-61-fix-handle-pointer-casting.patch  issue-62-fix-unused-parameter-warnings-for-sflow-functions.patch  patch.ordered.list
test-frameworks/: README.md
