# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) 2021 VMware, Inc.

#sources = files(
#    'dpif-netdev-lookup-avx512-gather.c',
#    'dpif-netdev-extract-avx512.c',
#    'dpif-netdev-avx512.c',
#)
#
#deps = []
#
#mapfile = '../openvswitchavx512.map'
#vflag = '-Wl'.format(meson.current_source_dir(), mapfile)
#openvswitchavx512 = library(
#  'openvswitchavx512', sources,
#  dependencies : deps,
#  include_directories : global_inc,
#  c_args : [
#    '-mavx512f',
#    '-mavx512bw',
#    '-mavx512dq',
#    '-mbmi',
#    '-mbmi2',
#    '-fPIC',
#  ],
#  link_args : ['-Wl,--no-undefined', vflag],
#  link_depends : mapfile,
#  version : as_version,
#  soversion : as_soversion,
#)
#

sources = files(
    'sflow_agent.c',
    'sflow_sampler.c',
    'sflow_poller.c',
    'sflow_receiver.c',
)

deps = []

mapfile = meson.project_build_root() + '/sflow.map'
vflag = '-Wl'.format(meson.current_source_dir(), mapfile)
sflow = library(
  'sflow', sources,
  dependencies : deps,
  include_directories : global_inc,
  link_args : ['-Wl,--no-undefined', vflag],
  link_depends : mapfile,
  version : as_version,
  soversion : as_soversion,
)

# MSR: file generation probably should be moved to a separate folder with its own meson.build file
# lib/meta-flow.inc
prog_python = import('python').find_installation('python3')
lib_meta_flow_inc = custom_target(
    'meta-flow.inc',
    input : meson.project_source_root() + '/include/openvswitch/meta-flow.h',
    output : 'meta-flow.inc',
    command : [
        prog_python,
        meson.project_source_root() + '/build-aux/extract-ofp-fields',
        'meta-flow', 
        '@INPUT@',
    ],
    capture : '@OUTPUT@',
    env : [
        'PYTHONPATH=' + meson.project_source_root() + '/python',
        'PYTHONDONTWRITEBYTECODE=yes', # this prevents creation of *.pyc files in 'python/build/__pycache__' directory
    ],
)

sources = files(
	'aes128.c',
	'backtrace.c',
	'bfd.c',
	'bundle.c',
	'byteq.c',
	'cfm.c',
	'classifier.c',
	'ccmap.c',
	'cmap.c',
	'colors.c',
	'command-line.c',
	'connectivity.c',
	'conntrack-icmp.c',
	'conntrack-tcp.c',
	'conntrack-tp.c',
	'conntrack-other.c',
	'conntrack.c',
	'coverage.c',
	'crc32c.c',
	'csum.c',
	'ct-dpif.c',
	'daemon.c',
	'db-ctl-base.c',
	'dummy.c',
	'dpctl.c',
	'dp-packet.c',
#	'dpif-netdev-extract-study.c',
	'dpif-netdev-lookup.c',
	'dpif-netdev-lookup-autovalidator.c',
	'dpif-netdev-lookup-generic.c',
	'dpif-netdev.c',
	'dpif-netdev-private-dfc.c',
	'dpif-netdev-private-dpif.c',
#	'dpif-netdev-private-extract.c',
	'dpif-netdev-perf.c',
	'dpif.c',
	'heap.c',
	'dynamic-string.c',
	'entropy.c',
	'fat-rwlock.c',
	'fatal-signal.c',
	'flow.c',
	'guarded-list.c',
	'hash.c',
	'hindex.c',
	'hmap.c',
	'hmapx.c',
	'id-pool.c',
	'if-notifier-manual.c',
	'ipf.c',
	'jhash.c',
	'json.c',
	'jsonrpc.c',
	'lacp.c',
	'learn.c',
	'learning-switch.c',
	'lockfile.c',
	'mac-learning.c',
	'match.c',
	'mcast-snooping.c',
	'memory.c',
	'meta-flow.c',
	'multipath.c',
	'namemap.c',
	'netdev-dummy.c',
	'netdev-offload.c',
	'netdev-vport.c',
	'netdev.c',
	'netlink.c',
	'nx-match.c',
	'object-collection.c',
	'odp-execute.c',
	'odp-util.c',
	'ofp-actions.c',
	'ofp-bundle.c',
	'ofp-connection.c',
	'ofp-ed-props.c',
	'ofp-errors.c',
	'ofp-flow.c',
	'ofp-group.c',
	'ofp-ipfix.c',
	'ofp-match.c',
	'ofp-meter.c',
	'ofp-monitor.c',
	'ofp-msgs.c',
	'ofp-packet.c',
	'ofp-parse.c',
	'ofp-port.c',
	'ofp-print.c',
	'ofp-prop.c',
	'ofp-protocol.c',
	'ofp-queue.c',
	'ofp-switch.c',
	'ofp-table.c',
	'ofp-util.c',
	'ofp-version-opt.c',
	'ofpbuf.c',
	'ovs-atomic-locked.c',
	'ovs-lldp.c',
	'ovs-numa.c',
	'ovs-rcu.c',
	'ovs-replay.c',
	'ovs-router.c',
	'ovs-thread.c',
	'ovsdb-cs.c',
	'ovsdb-data.c',
	'ovsdb-error.c',
	'ovsdb-idl.c',
	'ovsdb-map-op.c',
	'ovsdb-set-op.c',
	'ovsdb-condition.c',
	'ovsdb-parser.c',
	'ovsdb-session.c',
	'ovsdb-types.c',
	'ox-stat.c',
	'packets.c',
	'pcap-file.c',
	'perf-counter.c',
	'stopwatch.c',
	'poll-loop.c',
	'process.c',
	'pvector.c',
	'random.c',
	'rconn.c',
	'reconnect.c',
	'rstp.c',
	'rstp-state-machines.c',
	'seq.c',
	'sha1.c',
	'shash.c',
	'simap.c',
	'skiplist.c',
	'smap.c',
	'socket-util.c',
	'sort.c',
	'sset.c',
	'stp.c',
	'stream-fd.c',
	'stream-replay.c',
	'stream-tcp.c',
	'stream.c',
	'stdio.c',
	'string.c',
	'svec.c',
	'syslog-direct.c',
	'syslog-libc.c',
	'syslog-null.c',
	'table.c',
	'timer.c',
	'timeval.c',
	'tnl-neigh-cache.c',
	'tnl-ports.c',
	'netdev-native-tnl.c',
	'token-bucket.c',
	'tun-metadata.c',
	'unicode.c',
	'unixctl.c',
	'userspace-tso.c',
	'util.c',
	'uuid.c',
	'vconn-stream.c',
	'vconn.c',
	'vlan-bitmap.c',
	'vlog.c',
	'lldp/lldp.c',
	'lldp/lldpd.c',
	'lldp/lldpd-structs.c',
    'daemon-unix.c',
	'latch-unix.c',
	'signals.c',
	'socket-util-unix.c',
	'stream-unix.c',
#    'dirs.c',
	'ovsdb-server-idl.c',
	'vswitch-idl.c',
# Linux specific start    
    'dpif-netlink.c',
	'dpif-netlink-rtnl.c',
	'if-notifier.c',
	'netdev-linux.c',
	'netdev-offload-tc.c',
	'netlink-conntrack.c',
	'netlink-notifier.c',
	'netlink-socket.c',
	'rtnetlink.c',
	'route-table.c',
	'tc.c',
# Linux specific end
	'dpdk-stub.c',
    'async-append-null.c', # no POSIX_AIO
    'stream-nossl.c',
    'dns-resolve.h',
    'dns-resolve-stub.c',
)

sources += lib_meta_flow_inc

deps = [ thread_dep ]

mapfile = meson.project_build_root() + '/openvswitch.map'
vflag = '-Wl'.format(meson.current_source_dir(), mapfile)
openvswitch = library(
    'openvswitch', sources,
    dependencies : deps,
    include_directories : global_inc,
    link_args : ['-Wl,--no-undefined', vflag],
    link_depends : mapfile,
#    link_with : openvswitchavx512,
    version : as_version,
    soversion : as_soversion,
)

#global_libs += openvswitchavx512
global_libs += sflow
global_libs += openvswitch
